[package]
name = "mdbook-shiftinclude"
version = "0.2.0"
authors = ["David Drysdale <dmd@lurklurk.org>"]
edition = "2021"
license = "MPL-2.0"
description = "mdbook preprocessor for file inclusion with shift"
repository = "https://github.com/daviddrysdale/mdbook-shiftinclude"
keywords = ["mdbook", "preprocessor"]
categories = ["text-processing"]

[dependencies]
anyhow = "1.0.71"
clap = "4.5"
env_logger = "^0.11.1"
log = "^0.4.29"
mdbook-preprocessor = "0.5"
regex = "1.12.3"
serde_json = "1.*"
